feat: add utility functions for date manipulation, HTML escaping, and input sanitization
- Implemented date utilities using dayjs for formatting and parsing dates in specific timezones.
- Created HTML utility functions to escape special characters and build image snippets for safe HTML usage.
- Added input sanitization functions for color, font, and label validation to ensure safe and valid user inputs.
- Centralized exports in index.js for easier access to all utility functions.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "email-countdown-builder",
   "version": "1.0.0",
   "description": "Self-hosted email countdown timer generator with dynamic SVG/PNG rendering",
-  "main": "server.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "start:legacy": "node server.js"
   },
   "keywords": [
     "countdown",
@@ -19,7 +21,9 @@
   "type": "commonjs",
   "dependencies": {
     "dayjs": "^1.11.19",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "nodemon": "^3.1.11",
     "sharp": "^0.34.5"
   }
 }
